tests/fixtures/invalid/broken-edge-ref.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-alpha",
      "type": "organization",
      "name": "Alpha Corp"
    }
  ],
  "edges": [
    {
      "id": "edge-001",
      "type": "supplies",
      "source": "org-alpha",
      "target": "org-nonexistent",
      "properties": {
        "valid_from": "2024-01-01"
      }
    }
  ]
}
